--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="CSS/estilo.css">
-    <title>Meu Site</title>
+    <title>Gustavo Spadoto>/title>
 </head>
 <body>
     <div class="container">
@@ -31,7 +31,7 @@
         </div>
         <div class="row">
             <div class="col d-flex justify-content-center">
-                <img class="img-fluid" src="imgs/i3x7tnc8rrj71.jpg" width ="50%" alt="perfil">
+                <img class="img-fluid" src="imgs/eu.jfif" width ="50%" alt="perfil">
             </div>
         </div>
         <div class="row">
