--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="row">
             <nav class="nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Item 1</a>
+                    <a class="nav-link" href="#">Sobre</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Item 2</a>
@@ -34,10 +34,11 @@
                 <img class="img-fluid" src="imgs/eu.jfif" width ="3f0%" alt="perfil">
             </div>
         </div>
-        <div class="row" id="item1">
+        <div class="row" id="Sobre">
             <div class="col">
                 
-            </div>
+            </div> 
+            Meu nome é gustavo tenho 16 anos 
         </div>
 
         <div class="row" id="item2">
