--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="row">
             <nav class="nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Sobre</a>
+                    <a class="nav-link" href="#sobre">Sobre</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Item 2</a>
