--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="col">
                 
             </div> 
-            Meu nome é gustavo tenho 16 anos 
+            Meu nome é gustavo tenho 16 anos , sou cristão  
         </div>
 
         <div class="row" id="item2">
