--- a/index (1).html
+++ b/index (1).html
@@ -15,14 +15,14 @@
                 <li class="sobre">
                     <table>
                     
-                    <th><a class="sobre" href="#sobre">Sobre</a> </th>
+                    <th><a class="sobre" href="#algo">Sobre</a> </th>
                 </li>
                 <li class="item2">
-                <th>     <a class="item2" href="#">Item 2</a>
+                <th>     <a class="item2" href="#">algo2 2</a>
                 </th>
                 </li>
                 <li class="item3">
-                <th>   <a class="item3" href="#">Item 3</a></th>
+                <th>   <a class="item3" href="#">algo3 3</a></th>
                 </li>
                 
                <li class="item4">
